# pyquickstrom

./: .gitattributes  .gitignore  README.md  default.nix  mypy.ini  next.html  next.strom  pyproject.toml  result  shell.nix  todomvc.md  todomvc.strom
.github/workflows/: case-studies.yml  test.yml
case-studies/: Dockerfile  README.md  default.nix  measure.py  result  run.py  shared.py  shell.nix  timer.html  timer.strom  todomvc.nix  todomvc.strom
case-studies/runtimes/: TodoMVC runtimes.ipynb
case-studies/todomvc/: elements.strom  operators.strom
client-side/: default.nix  shell.nix
client-side/src/: arrays.ts  interactability.ts  queries.ts
client-side/src/scripts/: awaitChange.ts  awaitEvents.ts  installChangeObserver.ts  installEventListener.ts  observeChange.ts  queryState.ts
docs/: default.nix
html-report/: default.nix  package.json
html-report/dev/: report.json
html-report/src/: App.tsx  keys.ts  report.css
integration-tests/: default.nix
integration-tests/other/: todomvc.strom
integration-tests/passing/: async-change.strom  async-css-change.html  async-css-change.strom  liveness.html  liveness.strom  multi-page.html  multi-page.strom  only-noop.strom
nix/: nixpkgs.nix  poetry2nix.nix  specstrom.nix
quickstrom/: __main__.py  cli.py  executor.py  printer.py  protocol.py  result.py
quickstrom/reporter/: __init__.py  console.py  html.py  json.py
tests/: json_reporter_test.py  strategies.py
todomvc/: elements.strom  operators.strom
typings/deepdiff/: __init__.pyi
ulib/: quickstrom.strom
(+2 files in other folders)
