[tool.poetry]
name = "quickstrom"
version = "0.1.0"
description = ""
authors = ["owickstrom <oskar@wickstrom.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
