[tool.poetry]
name = "quickstrom"
version = "0.1.0"
description = ""
authors = ["owickstrom <oskar@wickstrom.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
click = "^7.1.2"
jsonlines = "^2.0.0"
deepdiff = "^5.2.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
mypy = "^0.812"
jedi = "^0.18.0"
rope = "^0.18.0"
flake8 = "^3.9.0"

[tool.poetry.scripts]
quickstrom = 'quickstrom.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"